--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "author": "Sepideh Falah",
   "license": "ISC",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "semantic-ui-react": "^0.87.1",
     "sequelize": "^5.8.6"
   },
   "devDependencies": {
