--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.0",
     "mysql2": "^1.6.5",
     "passport": "^0.4.0",
+    "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.87.1",
     "sequelize": "^5.8.6"
   },
